# teoria-da-decisao

./: README.md  ahp.m  main.ipynb  main_epsilon_restrito.ipynb  main_soma_ponderada.ipynb  pyproject.toml
Galera/: E_restrito.ipynb  SA_f(E).ipynb  SA_f(c).ipynb  Soma Ponderada.ipynb
data/: i5x25.csv  i5x25.xlsx
