[tool.poetry]
name = "Trabalho Computacional"
version = "0.1.0"
description = "Trabalho computacional da matéria de Teoria da Decisão"
authors = ["Lucas Azevedo <lucas5522@hotmail.com>", "Amanda Kellen <email@email.com>", "Miguel Ferreita <email@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
jupyter = "^1.0.0"
openpyxl = "^3.0.9"
jupyterlab = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
